--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion '29.0.2'
     defaultConfig {
         applicationId "com.github.shiguruikai.automuteapp"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0.0"
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.preference:preference-ktx:1.1.0'
+    implementation "androidx.security:security-crypto:1.0.0-alpha02"
 
     // lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-rc02'
